@@ -1,0 +1,1 @@
+BEGIN { a[1][2] = 3 }
