@@ -1,3 +1,8 @@
+2015-09-26         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am (muldimposix): New test.
+	* muldimposix.awk, muldimposix.ok: New files.
+
 2015-09-18         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* Makefile.am (fpat5): New test.
