@@ -1,3 +1,9 @@
+2015-09-26         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* awkgram.y (yylex): Diagnose multidimensional arrays for
+	traditional/posix (fatal) or lint. Thanks to Ed Morton
+	for the bug report.
+
 2015-09-25         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* config.guess, config.sub, config.rpath: Updated.
